--- a/stylesheet.css
+++ b/stylesheet.css
@@ -16,3 +16,5 @@ a:link {color: greenyellow;
         font-size: 20px;}
 a:visited {color: greenyellow;}
 a:hover {color: purple;}
+.space { margin-top: 100px;}
+.background-image {background-image: url(Images/Background.jpg);}
