--- a/stylesheet.css
+++ b/stylesheet.css
@@ -15,6 +15,6 @@ a:link {color: greenyellow;
         text-decoration: none;
         font-size: 20px;}
 a:visited {color: greenyellow;}
-a:hover {color: purple;}
+a:hover {color: rgb(182, 2, 182);}
 .space { margin-top: 100px;}
 .background-image {background-image: url(Images/Background.jpg);}
